# ytranslate

./: .gitignore  README.md  pyproject.toml  requirements.txt  ytranslate.py  ytranslate_server.py
extension/: background.js  content.js  manifest.json
